<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/accountName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_accountName"
        app:layout_constraintBaseline_toBaselineOf="@+id/nameFill"
        app:layout_constraintStart_toStartOf="@+id/accountInfo" />

    <TextView
        android:id="@+id/nameFill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:layout_marginTop="29dp"
        android:text="Link to name missing"
        app:layout_constraintStart_toEndOf="@+id/accountName"
        app:layout_constraintTop_toBottomOf="@+id/accountInfo" />

    <TextView
        android:id="@+id/accountInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="46dp"
        android:layout_marginTop="88dp"
        android:text="@string/text_accountInfo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/accountEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_emailAddress"
        app:layout_constraintBaseline_toBaselineOf="@+id/emailFill"
        app:layout_constraintEnd_toEndOf="@+id/accountName" />

    <TextView
        android:id="@+id/emailFill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:layout_marginTop="13dp"
        android:text="Link to email missing"
        app:layout_constraintStart_toEndOf="@+id/accountEmail"
        app:layout_constraintTop_toBottomOf="@+id/nameFill" />

    <Button
        android:id="@+id/quizCreatorButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="9dp"
        android:text="@string/button_createQuiz"
        app:layout_constraintBottom_toTopOf="@+id/returnToMainButton"
        app:layout_constraintEnd_toEndOf="@+id/returnToMainButton"
        app:layout_constraintStart_toStartOf="@+id/returnToMainButton" />

    <Button
        android:id="@+id/returnToMainButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        android:layout_marginBottom="66dp"
        android:text="@string/button_returnMain"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>