<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20sp"
            android:inputType="textPersonName"
            android:text="@string/field_username"/>

        <EditText
            android:id="@+id/editTextTextPassword2"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:textSize="20sp"
            android:inputType="textPassword"
            android:hint="Password"/>

        <Button
            android:id="@+id/loginButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/button_login" />

        <Button
            android:id="@+id/registerButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/button_register" />

    </LinearLayout>

</RelativeLayout>